<resources>
    <string name="app_name">Rock Music!</string>
    <string name="close" />
    <string name="open">open</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about_item_android_id"><![CDATA[About/> <item android:id=]]></string>
    <string name="exit">Exit</string>
    <string name="favourite">favourite</string>
    <string name="playlist">Playlist</string>
    <string name="search_view">Search</string>
    <string name="guys_rock">Guys Rock!😀</string>
    <string name="total_songs">Total Songs:</string>
    <string name="favoutrite">Fav❤</string>
    <string name="startTime">00:00</string>
    <string name="endtime">00:00</string>
    <string name="songTitle">Bin bulaye - dino james song.mp3</string>
    <string name="equalizer">Equalizer</string>
    <string name="timer">Timer</string>
    <string name="share_this_song">Share This song..</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_45_minutes">45 Minutes</string>
    <string name="_60_minutes">60 Minutes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="enter_playlist_name">Enter Playlist Name</string>
    <string name="user_name">User name...</string>
    <string name="remove_all">Remove All</string>
    <string name="add_songs">Add songs</string>
    <string name="remove_songs_android_icon">Remove Songs android:icon=</string>
    <string name="add_song">Add Songs</string>
    <string name="about">About</string>
    <string name="suggestion">Feedback</string>
    <string name="send">Send</string>
    <string name="email">Email Address (@Optional)</string>
    <string name="subject_like_error_query_suggestions_etc">Subject(like:Error,Query,Suggestions etc..)</string>
    <string name="set_theme">Set Theme</string>
    <string name="sort_by">Sort By</string>
    <string name="app_version">App Version: 1.0.1</string>

</resources>