<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:layout_marginBottom="10dp"
    android:background="?attr/themeColor"
    >

    <LinearLayout
        android:id="@+id/minutes15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/_15_minutes"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/minutes30"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/_30_minutes"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/minutes45"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/_45_minutes"
            android:layout_marginStart="10dp" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/minutes60"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_timer"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/_60_minutes"
            android:layout_marginStart="10dp" />

    </LinearLayout>

</LinearLayout>